templates/nfreecad-traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nfreecad
  labels:
    name: nfreecad
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfreecad
  namespace: nfreecad
spec:
  selector:
    matchLabels:
      app: nfreecad
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nfreecad
      namespace: nfreecad
    spec:
      securityContext:
        runAsUser: 0
        fsGroup: 0
      volumes:
      - name: shmem
        emptyDir:
          medium: Memory
      containers:
      - name: nfreecad
        image: ghcr.io/nxvapps/nfreecad:cuda12.4.0-ubuntu22.04
        ports:
        - containerPort: 7777
        livenessProbe:
          httpGet:
            path: /
            port: 7777
            scheme: HTTP
          initialDelaySeconds: 300
          periodSeconds: 10
        volumeMounts:
        - name: shmem
          mountPath: /dev/shm
        resources:
          limits:
            nvidia.com/gpu: "1"
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: nfreecad
  name: nfreecad
  namespace: nfreecad
spec:
  ports:
    - port: 7777
      name: http
      targetPort: 7777
  selector:
    app: nfreecad
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nfreecad-auth-middleware
  namespace: nfreecad
spec:
  basicAuth:
    removeHeader: true
    secret: nfreecad-basic-auth
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nfreecad
  namespace: nfreecad
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/service.scheme: "http"
    traefik.ingress.kubernetes.io/router.middlewares: nfreecad-nfreecad-auth-middleware@kubernetescrd
spec:
  ingressClassName: "traefik"
  rules:
  - host: nfreecad.somedomain.com
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nfreecad
              port:
                number: 7777
